# confer

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY.md  build.rs  clippy.toml  dist-workspace.toml
.github/: build-setup.yml
.github/workflows/: checksum-installer.yml  ci.yml  crates-publish.yml  docs-version.yml  release.yml
docs/: index.html
src/: alias.rs  api.rs  append.rs  append_ref.rs  arm.rs  autoheal.rs  cli.rs  clonehome.rs  config.rs  config_hub.rs  crosshub.rs  cursor.rs  dashboard.rs  doctor.rs  envelope.rs  fleet.rs  ghapp.rs  gitcmd.rs  groups.rs  hooks.rs  identity.rs  inbox.rs  init.rs  join.rs  keygen_release.rs  keyring.rs  knownhubs.rs  machineconfig.rs  main.rs  patch.rs  pollcmd.rs  presence.rs  projection.rs  reconnect.rs  refcmd.rs  refcode.rs  repomap.rs  repos.rs  reposdiscover.rs  roster.rs  (+15 more)
tests/: README.md  boundary.rs  cli.rs  serve_api.rs  two_clone.sh
ui/: .gitignore  REDESIGN.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
ui/e2e/: chat-glance.spec.ts  code-anchored-reader.spec.ts  code-collapse.spec.ts  code-gutter.spec.ts  code-minimap.spec.ts  code-revbar.spec.ts  code-timeline.spec.ts  events.spec.ts  hub-nav.spec.ts  interactions.spec.ts  mobile.spec.ts  note-popover.spec.ts  overlay-stack.spec.ts  overview.spec.ts  read-state.spec.ts  repos.spec.ts  smoke.spec.ts  thread-nav.spec.ts  views.spec.ts
ui/redesign-mockups/: 01-overview.html  02-hub-nav.html  03-thread-nav.html  04-chat-glance.html  04-metathread-minimap.html  05-board-cockpit.html  05-composable-cards.html  07-repos-integrity-gravity.html  08-fleet-BRIEF.md  08-fleet-crew-deck.html  09-event-type-BRIEF.md  10-navigation-history-RESEARCH.md  11-code-anchored-conversations.html  11-code-collapse-RESEARCH.md  11-code-view-BUILD-BRIEF.md  12-code-gutter-and-time.html  13-code-range-biography.html
ui/src/: App.svelte  App.test.ts  app.css
ui/src/lib/: api.test.ts  api.ts  attention.test.ts  (+55 more)
(+77 files in other folders)
