[package]
name = "confer-cli"
version = "0.6.9"
edition = "2021"
rust-version = "1.82"
description = "A git-native coordination substrate for fleets of AI agents — an append-only, signed, verifiable message log with a thin liveness layer, no database and no server."
license = "MIT OR Apache-2.0"
repository = "https://github.com/codeshrew/confer"
homepage = "https://github.com/codeshrew/confer"
readme = "README.md"
keywords = ["agents", "coordination", "git", "cli", "multi-agent"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "confer"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ulid = "1"
chrono = { version = "0.4", features = ["clock"] }
anyhow = "1"
notify = "6"
serde_yaml = "0.9"
toml = "0.8"
ratatui = { version = "0.30.2", optional = true }
crossterm = { version = "0.29.0", optional = true }
libc = "0.2.186"
tiny_http = { version = "0.12.0", optional = true }
semver = "1.0.28"
fs2 = "0.4.3"
# `confer update`: self-update for a curl|sh/GitHub-binary (standalone) install only — reads the
# dist install receipt; a package-manager install has no receipt and is delegated to brew/cargo.
axoupdater = { version = "0.10", features = ["blocking"] }

[profile.release]
strip = true

# Keep debug info for OUR crate (debuggable), but strip it from all third-party
# dependencies — dep debug symbols are what balloon target/ disk usage.
[profile.dev.package."*"]
debug = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# `dashboard` (TUI) and `serve` (web) are default-on but independently droppable:
# `--no-default-features` yields a minimal CLI with neither stack. Gating the
# ratatui/tiny_http deps behind features keeps a minimal build lean.
[features]
default = ["dashboard", "serve"]
dashboard = ["dep:ratatui", "dep:crossterm"]
serve = ["dep:tiny_http"]
